clues- javascript functions skeleton

--- a/clues.html
+++ b/clues.html
@@ -188,6 +188,65 @@
 			a.css(id, {"display":"none"});
 		}
 	};
+
+
+	// Clues game scripts
+	var clu = {
+		solution : [ ],
+		hands : [ ],
+		move : 0,
+		data : [
+			// guests
+			"red",
+			"orange",
+			"yellow",
+			"green",
+			"blue",
+			"purple",
+			// items
+			"diamond pendant",
+			"jade statue",
+			"$1,000,000",
+			"silver shield",
+			"gold bars",
+			"white eagle bonds",
+			// rooms
+			"study",
+			"hall",
+			"lounge",
+			"billiards",
+			"library",
+			"dinning",
+			"conservatory",
+			"ballroom",
+			"kitchen"
+		],
+		init : function () {
+		
+		},
+		get_solution : function () {
+		
+		},
+		check_solution : function () {
+		
+		},
+		roll : function () {
+			// 1d6 roll
+			var temp = 0;
+			temp = Math.floor(Math.random() * 6) + 1;
+			this.move = results;
+		},
+		move : function () {
+		
+		},
+		guess : function () {
+		
+		}
+	
+	}
+
+
+
 </script>
 </body>
 </html>
