Add color palatte

--- a/clues.html
+++ b/clues.html
@@ -4,6 +4,18 @@
 	<title>CLUES</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<style type="text/css">
+	/*
+		Color		Hex#
+		red	 		color: #c77a7e;
+		orange		color:#e2b896;
+		yellow		color:#eef2bf;
+		green		color:#cadfc6;
+		blue		color:#81aad5;
+		purple		color:#cfc0d3;
+		gray		color:#efefec;
+		white		color:#ffffff;
+
+	*/
 		.nav {
 			position: absolute;
 			top: 0px;
