--- a/territory.html
+++ b/territory.html
@@ -175,8 +175,10 @@
 		height: 58px;
 		background-color: #999999;
 		border: 1px solid #ffffff;
-		color: #ffffff;
+		color: #000000;
 		text-align: center;
+		font-size: 40px;
+		line-height: 58px;
 	}
 
 	.select {
@@ -192,7 +194,7 @@
 	.d {background-color: #cadfc6;}
 	.e {	background-color: #81aad5;}
 
-	.captial, .tower{color: red;}
+	.red {color: red;}
 	
 	</style>
 </head>
@@ -350,7 +352,7 @@
 		],
 		child : [
 			[-1,0,1,2,3],
-			[4,5,0,0,0],
+			[4,0,0,0,0],
 			[0,0,0,0,0],
 			[0,0,0,0,0],
 			[0,0,0,0,0]
@@ -384,6 +386,20 @@
 		},
 		tree : function () {
 		
+		},
+		ui : function () {
+			var count = 0;
+			for (i = 0; i < ter.owner.length; i +=1) {
+				for (j = 0; j < ter.owner[i].length; j +=1) {
+					a.get("room" + count).className = "rooms " + ter.owner[i][j];
+					if (ter.child[i][j] === 1 || ter.child[i][j] === 3) {
+						a.get("room" + count).innerHTML = "<span class='red'>" + ter.child[i][j] + "</span>";
+					}else {
+						a.get("room" + count).innerHTML = ter.child[i][j];
+					}
+					count +=1;
+				}
+			}
 		},
 		// Player controls
 		build: function () {
