--- a/spyhunt.html
+++ b/spyhunt.html
@@ -274,7 +274,7 @@
 	<div  id="menu"  class="row cell75 center" style="display: none;">
 		<a onclick= "spy.menu();">X</a>
 		<br style= "clear: both;" />
-		<div class="btn" onclick= "spy.init ();">Start</div> 
+		<div class="btn" onclick= "spy.init ();">New Game</div> 
 		<div class="btn" onclick="spy.instr(1);">Instructions</div>
 		<br />
 		<h3>Difficulty</h3>
