Fix styles for tablet

--- a/spyhunt.html
+++ b/spyhunt.html
@@ -80,7 +80,7 @@
 			width: 18%;
 			float: left;
 		}
-@media all and (min-width: 400px) {
+@media all and (min-width: 500px) {
 	.cell {
 		float : left;
 	}
@@ -117,7 +117,7 @@
 	}
 
 	#spyscreen {
-	 	width: 1000px;
+	 	width: 500px;
 	  	margin: 0px auto;
 	}
 
@@ -138,7 +138,7 @@
 		width: 300px !important;
 		height: 400px !important;
 		margin: 0px auto;
-		border: 3px solid #e7e7e7;
+		border: 3px solid #999999;
 		background-color: #e7e7e7;
 		position: fixed;
 		top: 0px;
@@ -157,11 +157,11 @@
 	}
 
 	#spy_stage {
-		width: 400px !important;
+		width: 500px !important;
 		margin: 0px auto !important;
 	}
 	#spy_stage1, #agent_log {
-		width: 400px !important;
+		width: 500px !important;
 	}
 } /* /media */
 	 	#console {
