Donate button and init for index.html

--- a/rpgcalculator.html
+++ b/rpgcalculator.html
@@ -9,6 +9,22 @@
 	 		padding: 0;
 	 		background-color: #999999;
 	 	}
+	 	#nav {
+	 		color: #ffffff;
+	 		background-color: #000000;
+	 		width: auto;
+	 		height: 20px;
+	 		padding: 5px;
+	 		font-size: 20px;
+	 		margin-bottom: 10px;
+	 		position: relative;
+	 		top:0px;
+	 	}
+
+	 	#nav a {
+	 		color: #ffffff;
+	 		text-decoration: none;
+	 	}
 	 	.center {
 	 		margin: auto;
 	 	}
@@ -73,6 +89,7 @@
 			color: #ffffff;
 			background-color: #003366;
 		}
+
 @media all and (min-width: 600px) {
 	.btn {
  		background-color: #e7e7e7;
@@ -155,7 +172,7 @@
  	}
 }
 	 	#dice_stage {
-			width: 300px;
+			width: 350px;
 			margin: auto;
 		}
 	 	#results {
@@ -207,6 +224,14 @@
 </style>
 </head>
 <body>
+	<div id="nav">
+		<div style="float: left;"> 
+			<a href="http://orwek.github.io/5x">5X:</a> RPG Calculator
+		</div>
+		<div style="float: right;">
+			<a href="http://paypal.me/KendallPurser">Donate</a>
+		</div>
+	</div>
 	<div id="dice_stage" class="center" style="width: 70%">
 		<div  class="row center">
 			<div  class="cell80" >
